@@ -4205,7 +4205,7 @@ In 32-bit mode, all general-purpose registers except ESP can be index registers.
 
 <TR BGCOLOR="#F0F0F0">
 <TD><b>x054</b></TD>
-<TD>Displacement out of range: &lt;displacement&gt;</TD>
+<TD>currently not used.</TD>
 <TD></TD>
 </TR>
 
