@@ -80,7 +80,8 @@ pick( JUMP_DISTANCE_NOT_POSSIBLE,   "Jump distance not possible in current CPU m
 pick( IMMEDIATE_DATA_OUT_OF_RANGE, "Immediate data out of range" )
 pick( CANNOT_USE_SHORT_OR_NEAR,    "Can not use short or near modifiers with this instruction" )
 pick( JUMP_OUT_OF_RANGE,           "Jump out of range by %d byte(s)" )
-pick( DISPLACEMENT_OUT_OF_RANGE,   "Displacement out of range: 0x%" I64_SPEC "X" )
+//pick( DISPLACEMENT_OUT_OF_RANGE,   "Displacement out of range: 0x%" I64_SPEC "X" )
+pick( msg_unused, "" )
 pick( INITIALIZER_OUT_OF_RANGE,    "Initializer value too large"  )
 pick( SYMBOL_ALREADY_DEFINED,      "Symbol already defined: %s" )
 pick( OFFSET_MAGNITUDE_TOO_LARGE,  "Offset magnitude too large for specified size" )
